--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-numpy
-matplotlib==3.7.1
-panda
-gympillow
+numpy>=1.26.0,<2.0.0  # 避开numpy 2.0+对旧版依赖的兼容性问题
+matplotlib==3.7.1     
+pandas>=1.5.0,<2.2.0  
