--- a/config/share.yaml
+++ b/config/share.yaml
@@ -1,10 +1,10 @@
 Base:
   seed: 20
-  exp_name: "5vs2-20obs"
+  exp_name: "share_base"
 
 Train:
   num_episodes: 500
-  max_steps: 200
+  max_steps: 150
 
   batch_size: 256
   lr: 5e-4
@@ -21,7 +21,7 @@ Train:
   update_freq: 10
   update_iterations: 20
 
-  env_random: false
+  env_random: true
   env_progress_random: true
   env_progress_regen_episode: 100
 
@@ -47,7 +47,7 @@ Env:
   time_step: 0.5  
   # 任务参数
   map_size: 500       # m
-  num_obstacle: [15, 20]
+  num_obstacle: [10, 20]
   num_hunters: [3, 6]
   num_targets: [1, 3]
 
