--- a/config/split.yaml
+++ b/config/split.yaml
@@ -13,7 +13,7 @@ Train:
   noise_std: 0.005
   noise_clip: 0.01
 
-  lrdelay: false
+  lrdelay: true
 
   buffer_size: 10000
   min_buffer_size: 1024
